DKAFC-5586: Update the HDFS stale file finder to add logic for deletion.
Test Plan: Verified the script by running it on kafka-h20aperf-phx cluster

Reviewers: #ldap_kafka_admins, #ldap_kafka_core_reviewers, satishd

Reviewed By: #ldap_kafka_admins, #ldap_kafka_core_reviewers, satishd

Subscribers: satishd

Tags: #has_java

JIRA Issues: DKAFC-5586

Monitoring and Alerts: NA

Differential Revision: https://code.uberinternal.com/D17295573